🐞 Bug fixes / Reading progress now appears on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -8706,13 +8706,16 @@ Descr: A bar indicator displaying the current reading progress
 .reading-progressbar {
   position: fixed;
   z-index: var(--zindex-fixed-element);
-  top: calc(var(--header-height) - var(--promo-banner-height));
+  top: var(--header-height);
   left: 0;
   width: 100%;
   height: 5px;
   color: #D3BDAB;
   pointer-events: none;
   display: none; }
+  @media (min-width: 768px) {
+    .reading-progressbar {
+      top: calc(var(--header-height) - var(--promo-banner-height)); } }
 
 .reading-progressbar--is-active {
   display: block; }
